# Aruco_ros

./: README.md  calibration.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/aruco/lib/aruco/: aruco_detect
install/aruco/share/ament_index/resource_index/parent_prefix_path/: aruco
install/aruco/share/aruco/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
src/aruco/: CMakeLists.txt  package.xml
src/aruco/config/: config.yaml
src/aruco/launch/: aruco_detect_launch.py
src/aruco/src/: aruco_detect.cpp  backup_old.cpp
